[package]
name = "peynir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
totp-rs = "5.5.1"
